# Spoon-Knife

./: index.html
vision/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
vision/devel/lib/hog_haar_person_detection/: hog_haar_person_detection
vision/devel/lib/people_and_car_detector/: hog_haar_person_detection  people_detector
vision/devel/lib/pkgconfig/: hog_haar_person_detection.pc  people_and_car_detector.pc
vision/devel/share/hog_haar_person_detection/cmake/: hog_haar_person_detectionConfig.cmake
vision/devel/share/people_and_car_detector/cmake/: people_and_car_detectorConfig.cmake
vision/src/: CMakeLists.txt  package.xml
vision/src/launch/: kamaz_vision.launch
vision/src/scripts/: imgfilter.py  vision_control.py
vision/src/src/: hog_haar_person_detection2.cpp  hog_haar_person_detection_copy.cpp  people_detector.cpp
